# sdl2-multiplatform-base

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.android  ant.properties  bootstrap-android.sh  build-android.sh
jni/src/: Android.mk
src/: main.c
